# scraper_base

./: README.md  pyproject.toml
scraper_base/: cookie_storage.py  driver_builder.py  email_reader.py
