[tool.poetry]
name = "scraper-base"
version = "0.1.0"
description = ""
authors = ["casss-dev <bcassidy50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
selenium = "^4.16.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
